fix: add body margin 0 to get pages rendered stretchfully in every browsers

--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Urbanist:wght@100;200;300;400;600&display=swap');
 
 .App, html, body {
+    margin: 0;
     color: var(--color-gray);
     font-size: var(--font-text-desktop);
     font-weight: 300;
